2007-08-09   <> 

	* CBinding.addin.xml, CBinding.mdp, Makefile.am: Updated the paths and
	  embedded the .addin.xml into the assembly

2007-08-08  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs, Gui/DataProvider.cs,
	  Parser/ProjectInformation.cs, Parser/Function.cs,
	  Parser/TagDatabaseManager.cs: Parse and complete for included system
	  files too.

2007-08-07  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Gui/AddLibraryDialog.cs,
	  Gui/EditPackagesDialog.cs, Gui/AddPathDialog.cs,
	  Gui/CodeGenerationPanel.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.AddPathDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs,
	  gtk-gui/CBinding.OutputOptionsPanel.cs,
	  gtk-gui/CBinding.AddLibraryDialog.cs, gtk-gui/gui.stetic: Updated
	  widgets.

2007-08-07  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, gtk-gui/CBinding.CodeGenerationPanel.cs: Removed
	  autotools support since it is currently very .NET specific.

2007-08-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* CBinding.addin.xml, CBinding.mdp, CBinding.mds,
	  CBinding.Autotools/AssemblyInfo.cs,
	  CBinding.Autotools/CAutotoolsSetup.cs,
	  CBinding.Autotools/CBinding.Autotools.mdp, Compiler/CCompiler.cs,
	  Compiler/ICompiler.cs, Compiler/GNUCompiler.cs: Started work on
	  supporting makefile generation.

2007-08-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/DataProvider.cs: Use correct icons.

2007-08-06  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Adjusted to new API
	  changes.

2007-08-03  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/CTextEditorExtension.cs: Added support for '::' completion.
	* Gui/DataProvider.cs: Changed the completion icon of a typedef to match the
	  icon used in the class pad.