@@ -1,5 +1,6 @@
 <AddIn
-	id          = "MonoDevelop.CBinding"
+	id          = "CBinding"
+	namespace   = "MonoDevelop"
 	name        = "C/C++ Language Binding"
 	author      = "Marcos David Marín Amador"
 	copright    = "MIT X11"
@@ -13,11 +14,13 @@
 	</Runtime>
 	
 	<Dependencies>
-		<AddIn id = "MonoDevelop.Core" version = "0.15.0"/>
-		<AddIn id = "MonoDevelop.Core.Gui" version = "0.15.0"/>
-		<AddIn id = "MonoDevelop.Ide" version = "0.15.0"/>
-		<AddIn id = "MonoDevelop.Projects" version = "0.15.0"/>
-		<AddIn id = "MonoDevelop.Projects.Gui" version = "0.15.0"/>
+		<AddIn id = "Core" version = "0.15.0"/>
+		<AddIn id = "Core.Gui" version = "0.15.0"/>
+		<AddIn id = "Ide" version = "0.15.0"/>
+		<AddIn id = "Projects" version = "0.15.0"/>
+		<AddIn id = "Projects.Gui" version = "0.15.0"/>
+		<AddIn id = "Components" version = "0.15.0"/>
+		<AddIn id = "SourceEditor" version = "0.15.0"/>
 	</Dependencies>
 
 	<Extension path = "/MonoDevelop/Ide/FileFilters">
@@ -91,12 +94,12 @@
 	
 	<ExtensionPoint path = "/CBinding/Views/ProjectBrowser/ContextMenu/PackagesFolderNode" name = "Packages folder context menu">
 		<Description>Context menu for packages folder in the solution pad.</Description>
-		<ExtensionNodeSet id = "MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<ExtensionPoint path = "/CBinding/Views/ProjectBrowser/ContextMenu/PackageNode" name = "ProjectPackage context menu">
 		<Description>Context menu for a package in the solution pad.</Description>
-		<ExtensionNodeSet id = "MonoDevelop.Core.Gui.ItemSet"/>
+		<ExtensionNodeSet id="MonoDevelop.Components.Commands.ItemSet"/>
 	</ExtensionPoint>
 	
 	<Extension path = "/MonoDevelop/Ide/Pads/ProjectPad">
@@ -163,7 +166,7 @@
 	    </Runtime>
 	    
 		<Dependencies>
-			<Addin id = "MonoDevelop.Autotools" version = "0.15.0"/>
+			<Addin id = "Autotools" version = "0.15.0"/>
 		</Dependencies>
 		
 		<Extension path = "/Autotools/SimpleSetups">
